more type safe collections in Resolver